prevented scrolling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@ td {
   border: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 #header {
   width: 100%;
   height: 100px;
